# wiki

./: .env.example  .gitignore  README.md  pyproject.toml
app/: auth.py  content.py  main.py  markdown_render.py  nkr_client.py  slugs.py  sources_writer.py  sync.py
app/templates/: 404.html  _add_source.html  base.html  concept.html  home.html  login.html  source.html  topic.html
deploy/: cloudflared-config.example.yml  com.harshdeep.wiki.plist.example  restart.sh
static/: style.css
tests/: test_smoke.py
